# pico-6502

./: 6502emu.c  CMakeLists.txt  README.md  configure.c  configure.h  hw_config.c  mcp-io.c  mcp-io.h
lib/no-OS-FatFS-SD-SPI-RPi-Pico/: ._LICENSE
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/: ._CMakeLists.txt  CMakeLists.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff15/: ._LICENSE.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff15/source/: ._00history.txt  ._00readme.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/src/: rtc-rp2350.c
lib/no-OS-FatFS-SD-SPI-RPi-Pico/dynamic_config_example/: ._CMakeLists.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/example/: ._CMakeLists.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/simple_example/: ._CMakeLists.txt  hw_config.c
sd-card-image/: config-c64-outmap.txt  config-common.txt  config-inmap.txt  config-list.txt  config-pet-outmap.txt  config-pico-pins.txt  config.txt  config2.txt  roms.txt
sd-card-image/data/: HELLO WORLD.BAS  HW.BAS  IO.BAS  LCD COUNT.BAS  WUMPUS.BAS
sd-card-image/source/: README.md  echo.s  hello-world.s  lcd.s  wozmon.s
stl/: pico-breakout.stl
